# learnopengl-macos-bootstrap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/assimp/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
